<resources>
    <string name="app_name">Настройка устройств КУМИР</string>
    <string name="Usb_NoneConnect">Отсутствует подключение, воспользуйтесь кнопкой "ПОДКЛЮЧИТЬСЯ"</string>
    <string name="errorReadTemp">Температура не считалась у всех датчиков!</string>
    <string name="notGoThread">Нельзя, т к идет диагностика, завершите ее и нажмите заново!</string>
    <string name="errorCodeNone">Что то пошло не так!</string>
    <string name="Disconnected">Подключение разорвано!</string>
    <string name="Usb_ErrorWriteData">Ошибка отправки данных</string>
    <string name="Usb_ErrorConnect">Произошла ошибка при попытке подключения</string>
    <string name="UsbNoneConnectDevice">Нет подключения, пожалуйста, выберите COM-порт и подключитесь!</string>
    <string name="readActivThread">На данный момент у вас активное общение с устройством. Мы не можем перенаправить вас на другое окно!</string>
    <string name="ConnectSuccess">Подключение успешно установлено</string>
    <string name="errorReconnect">Не удалось переподключиться</string>
    <string name="errorUnknown">Неизвестная ошибка! Попробуйте перезайти в приложение!</string>
    <string name="mainActivityText_ExtractDevice">Устройство было извлечено из USB-порта. Пожалуйста, подключите его снова</string>
    <string name="identifyDeviceFailed">Идентифицировать устройство не удалось!</string>
    <string name="errorTimeOutSand">Время ожидание ответа слишком большое, наверное вы отсоединили устройство!</string>
    <string name="errorVersionModem">Похоже, что ваша версия устройства не поддерживает диагностику (</string>
    <string name="notValidData">Похоже, что полученные данные не корректны!</string>
    <string name="notAnonents">На этом устройстве нет записанных абонентов!</string>
    <string name="notValidPasswordP101">Пароль не должен содержать символы отличные от ASCII, должен состоять из 6 символов!</string>
    <string name="notValidPasswordP101Hex">Пароль не должен содержать символы отличные от HEX, должен состоять из 12 символов!</string>
    <string name="notValidRangeP101">Интервал должен быть в диапазоне от 10 до 200</string>
    <string name="notIdDeviceP101">Номер прибора может быть только: 234, 236, 204, 230</string>
    <string name="notValidNameP101">Имя не может быть пустым и не должно содержать символов отличных от CP1251</string>
    <string name="noNumberDevice">Поле номер прибора не может быть пустым!</string>
    <string name="notKeyValidP101">Ключ не может быть пустым!</string>
    <string name="notAddressValidP101">Сетевой адрес не может быть пустым!</string>
    <string name="notValidTimeOutP101">Отображение значений должно быть в диапазоне от 1 до 600</string>
    <string name="notValidTimeP101">Время ожидания должно быть в диапазоне от 200 до 5000</string>
    <string name="notDriver">Нет драйвера!</string>
    <string name="errorSettingPort">Для данного устройства такие настройки порта не корректны!</string>
    <string name="errorFindSpeedSerial">Поиск скорости не дал результата! Убедитесь что кабель подключен надежно.</string>
    <string name="notReadDevice">Вы еще не прочитали устройство!</string>
    <string name="notUseSerialPort">Нельзя читать или записывать во время проверки сигнала!</string>
    <string name="notReadDevModeDevice">Не удалось получить режим работы устройства!</string>
    <string name="notReadRange">Не удалось получить диапазон устройства!</string>
    <string name="notReadActPortDevice">Не удалось получить активный порт устройства</string>
    <string name="notReadPortDevice">Не удалось получить порты устройства</string>
    <string name="notDeviceType">Вы перепутали устройство у вас - </string>
    <string name="notDeviceTypeApp">Поступил неизвестный идентификатор! Выключите ваше устройство и попробуйте еще раз! Убедитесь что он поддерживаемый!</string>
    <string name="notDeviceM32">Ваше устройство не похоже на серию m32 проверьте его!</string>
    <string name="errorSendDataWrite"> - ошибка записи! Остальные данные не были сохранены!</string>
    <string name="errorSpeed">Неполадка переключения скоростей!</string>
    <string name="errorSendDataRead"> - ошибка чтения</string>
    <string name="nonValidData">Пришедшие данные некорректны!</string>
    <string name="nonPortEdit">Нельзя менять настройки этого порта потому что он не активный</string>
    <string name="nonPortEditSorPresetSet">Что бы изменять настройки порта нужно выбрать расширенные настройки</string>
    <string name="nonSettingDeviceNeedsFlashed">Настройки данного устройства не верны, для перепрошивки нажмите кнопку записать. У вас: </string>
    <string name="nonWriteSetting">Воспользуйтесь кнопкой \"Чтение\"!</string>
    <string name="exitDiagRestart">Выход из режима диагностики возможен только путем перезагрузки устройства.</string>
    <string name="nonNamePreset">Перед сохранением шаблона, нужно вписать название в поле \"Название шаблона\"!</string>
    <string name="errorDataBase">Ошибка базы данных!</string>
    <string name="errorSetModePreset">Невозможно установить режим работы из шаблона т к он отсутствует!</string>
    <string name="nonSelectDriver">Вы не выбрали драйвер</string>
    <string name="errorSandDriver">Драйвер не удалось отправить, возможно были проблемы с подключением или можем вышел из режима загрузки драйвера!</string>
    <string name="coreProgramDialogText">Переключите П1:1 в положение OFF, </string>
    <string name="coreProgramClueText">Не забудьте переключить П1:1 в положение ON, </string>
    <string name="sand">Отправка</string>
    <string name="notValidUpdateName">Название не может быть пустым, название должно отличаться от существующего!</string>
    <string name="nameUseUpdatePreset">Шаблон с таким названием уже существует! Введите другое!</string>
    <string name="errorRenameName">К сожалению в данной версии программы нельзя менять имя пользователя!</string>
    <string name="sucPresetSaveDataBase">Сохранение прошло успешно!</string>
    <string name="sucPresetLoadDataBase">Загрузка прошла успешно!</string>
    <string name="nonPathSaveFile">Некорректный путь!</string>
    <string name="noSaveFiles">Файлы не удалось сохранить!</string>
    <string name="noSaveFilesTime">Файлы не удалось сохранить! Похоже что телефон заглючил и долго получал данные с БД!</string>
    <string name="yesSaveFiles">Файлы удалось сохранить!</string>
    <string name="fileError">По какой то причине файл не загрузился!</string>
    <string name="notFormatFile">Не тот формат файла! Нужно bin</string>
    <string name="noFileSave">Нет данных для сохранения!</string>
    <string name="noConnected">У вас нет подключения!</string>
    <string name="nonPermissionsSaveFile">Не получено разрешения для сохранения!</string>
    <string name="nonPermissionsPos">Вы не дали разрешения на геопозицию поэтому эта опция вам не доступна! Ее надо включить! Если вы не увидели окно с разрешением это вам нужно сделать в настрйоках, О ПРИЛОЖЕНИИ, И РАЗРЕШИТЬ ИСПОЛЬЗОВАНИЕ ГЕОПОЗИЦИИ!</string>
    <string name="nonEmptyData">Не все обязательные поля были заполнены!!!</string>
    <string name="nonConnectAdapter">ВЫ НЕ ПОДКЛЮЧЕНЫ К USB АДАПТЕРУ!!! ПОДКЛЮЧИТЕСЬ ПОЖАЛУЙСТА</string>
    <string name="nonIniFile">Выберите ini файл!</string>
    <string name="nonValidIniFile">Ваш файл ini не корректен!</string>
    <string name="delFileYesNo">Вы уверены что хотите удалить шаблон </string>
    <string name="delAbonent">Вы уверены что, хотите удалить абонента - </string>
    <string name="readAlready">Вы уже прочли устройство</string>
    <string name="errorLoadStm">Произошла ошибка при загрузки прошивки в модем!</string>
    <string name="pleaseResetStm203">Для продолжения перезагрузите устройство и нажмите кнопку что бы уведомить о перезагрузки!</string>
    <string name="errorValidPole">Не все поля введены валидно!</string>
    <string name="errorValidAPN">Длина APN не должна превышать 63 символа</string>
    <string name="errorValidIPDNS">Длина Адреса сервера не должна превышать 63 символа</string>
    <string name="errorValidLogin">Длина логина не должна превышать 63 символа</string>
    <string name="errorValidPassword">Длина пароля не должна превышать 63 символа</string>
    <string name="errorEmptyNamePreset">Название не может быть пустым!</string>
    <string name="errorValidPasswordRim">Длина пароля должна состоять из 6 символов</string>
    <string name="errorValidAddressRim">Адрес должен быть в диапазоне от 0 до 255</string>
    <string name="errorValidSim">Пин код для sim должен состоять из 4 цифр</string>
    <string name="errorKEEPALIVE">Время отправки сигнала должно быть в диапазоне от 10 до 600</string>
    <string name="errorTimeCall">Время вызова должно быть в диапазоне от 2 до 30</string>
    <string name="errorCTIMEOUT">Время ожидания подключения должно быть в диапазоне от 1 до 4320</string>
    <string name="errorTCPPORT">TCP порт должно быть в диапазоне от 1024 до 65535</string>
    <string name="errorPOWER">Мощность излучения должно быть в диапазоне от -16 до 14</string>
    <string name="errorNETKEY">Ключ доступа к сети не должно превышать 60 символов</string>
    <string name="errorSizeBuffer">Размер буфера должен быть в диапазоне от 0 до 65535</string>
    <string name="errorRussionChar">Нельзя использовать символы отличные от (0..9, abcd..z, -, .)!</string>
    <string name="errorTimeOutEnfora">Время ожидание должно быть в диапазоне от 3 до 1472</string>
    <string name="errorLoginPassworsd">Проблемы с логином или паролем, проверьте есть ли в них пробелы запятые или возможно одно из полей не было заполнино!</string>
    <string name="noneValidRecordMONITOR">Настройки не были изменены. Запись не требуется</string>
    <string name="errorValidServer">Некорректный формат 1–го или 2–го сервера. Правильный формат записи (0-255).(0-255).(0-255).(0-255)</string>
    <string name="errorValidServerCore">Некорректный формат IP адрес сервера диспетчера Правильный формат записи (0–255).(0-255).(0-255).(0-255)</string>
    <string name="errorValidAPNEnfora">Длина APN не должена привышать 128 символов</string>
    <string name="errorValidNumberPhone">Не корректный номер телефона! Введите в формате +70000000000</string>
    <string name="errorMalfunction">Устройство НЕ исправно! Присутствуют ошибки.</string>
    <string name="errorNoData">Часть данных с модема не пришло или пришло не правильно!</string>
    <string name="TextTitleMain">Настройка устройств</string>
    <string name="versionApp">Версия: 1.10.4.1</string>
    <string name="todo">TODO</string>
    <string name="TextHiMain">Для настройки устройства вам нужно:</string>
    <string name="serinerNumber">Серийный номер:</string>
    <string name="versionProgram">Версия прошивки:</string>
    <string name="chackSignalTitle">Проверка сигнала</string>
    <string name="communicationOperatorTitle">Оператор мобильной связи: </string>
    <string name="LevelSignalTitle">Уровень сигнала: </string>
    <string name="errorsSignalTitle">Ошибки сигнала: </string>
    <string name="operatorTitle">Оператор связи:</string>
    <string name="mccTitle">Kод страны(mcc):</string>
    <string name="mncTitle">Код мобильной сети(mnc):</string>
    <string name="rxlevTitle">Уровень приема(rxlev):</string>
    <string name="cellidTitle">Идентификатор ячейки(cellid):</string>
    <string name="arfcnTitle">Частота(arfnc):</string>
    <string name="lacTitle">Код региона(lac):</string>
    <string name="bsicTitle">Код базовой станции(bsic):</string>
    <string name="step1MainTitle">1) Подключите устройство к USB-порту с помощью адаптера КУМИР</string>
    <string name="step2MainTitle">2) Выберите свое устройство в боковом меню</string>
    <string name="step3MainTitle">3) Настройте ваше устройство</string>
    <string name="threshold">Порог</string>
    <string name="rawvalue">Текущее значение</string>
    <string name="rawstate">Текущее состояние</string>
    <string name="state">Долгое состояние</string>
</resources>