<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <ImageView
        android:id="@+id/iconKumir"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStep3"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/textMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextTitleMain"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iconKumir"
        app:layout_constraintStart_toStartOf="@+id/iconKumir"
        app:layout_constraintTop_toBottomOf="@+id/iconKumir" />

    <TextView
        android:id="@+id/TextHiMainFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:gravity="center"
        android:text="@string/TextHiMain"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/versionApp"
        android:textColor="@color/textColor"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textStep1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/step1MainTitle"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/TextHiMainFragment"
        app:layout_constraintStart_toStartOf="@+id/TextHiMainFragment"
        app:layout_constraintTop_toBottomOf="@+id/TextHiMainFragment" />

    <TextView
        android:id="@+id/textStep2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/step2MainTitle"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/TextHiMainFragment"
        app:layout_constraintStart_toStartOf="@+id/TextHiMainFragment"
        app:layout_constraintTop_toBottomOf="@+id/textStep1" />

    <TextView
        android:id="@+id/textStep3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/step3MainTitle"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="@+id/TextHiMainFragment"
        app:layout_constraintStart_toStartOf="@+id/TextHiMainFragment"
        app:layout_constraintTop_toBottomOf="@+id/textStep2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="@+id/textStep2"
        app:layout_constraintStart_toEndOf="@+id/textStep1"
        app:layout_constraintTop_toTopOf="@+id/textStep2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="3dp"
        android:src="@drawable/usb"
        app:layout_constraintBottom_toBottomOf="@+id/textStep1"
        app:layout_constraintStart_toEndOf="@+id/textStep1"
        app:layout_constraintTop_toTopOf="@+id/textStep1" />
</androidx.constraintlayout.widget.ConstraintLayout>