<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ItemOperator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/fun3Element">

            <View
                android:id="@+id/divider"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/mts__network_provider__logo_wine"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutParams"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayoutParams" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutParams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textMCC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/mccTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@+id/textOperator"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textMNC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/mncTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@+id/textMCC"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textRxlev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/rxlevTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@+id/textMNC"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textCellid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cellidTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@+id/textRxlev"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textOperator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/operatorTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textArfcn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/arfcnTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@+id/textCellid"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textLac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/lacTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@+id/textArfcn"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textBsic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/bsicTitle"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toEndOf="@+id/textLac"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
