<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Enforma1318Diag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diag.Enfora1318DiagFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lineSet"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/fon2Element"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarChackSignal"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textCommunicationOperator"
        app:layout_constraintTop_toBottomOf="@+id/lineChaclkSignal" />

    <TextView
        android:id="@+id/textChackSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/chackSignalTitle"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2Set" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lineChaclkSignal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/fon2Element"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChackSignal">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textCommunicationOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/communicationOperatorTitle"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChaclkSignal" />

    <TextView
        android:id="@+id/textLevelSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/LevelSignalTitle"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCommunicationOperator" />

    <TextView
        android:id="@+id/textErrorSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/errorsSignalTitle"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLevelSignal" />

    <Button
        android:id="@+id/buttonChackSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textColor"
        android:text="@string/chackSignalTitle"
        android:textColor="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textErrorSignal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/line2Set"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:background="@color/fon2Element"
        app:layout_constraintTop_toBottomOf="@+id/serinerNumber"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/serinerNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/serinerNumber"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineSet" />

    <TextView
        android:id="@+id/textVersionFirmware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/versionProgram"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/serinerNumber"
        app:layout_constraintTop_toBottomOf="@+id/lineSet" />

</androidx.constraintlayout.widget.ConstraintLayout>